corrected an issue with the preloaded images on firefox and added loading image to upload character form, hopefully in correct location

--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -22,7 +22,7 @@ body
 .preload-images
 {
     position: absolute;
-    margin: -10000px;
+    margin-left: -10000px;
 }
 #wrapper
 {
